--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,23 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<link rel="stylesheet" href="link.css">
+	<script  src="link.js"></script>
+	 <title></title>
+</head>
+<body class="class-for-index">                 
+	 <ul>
+	 	  
+                                <li><a href="">Home</a></li>
+                                <li><a href="">About us</a></li>
+                                <li><a href="">Pricing</a></li>
+                                <li><a href="">Catering</a></li>
+                                <li><a href="">Contact us</a></li>
+                                </ul>
+                                <div class="wrapper">
+                            <p>The irresistible aroma of <a href="">Indian</a>spices greets you as you enter Namaste India, a hidden gem centrally located in the heart of <a href="">Chinatown</a>. One of the nicest Indian restaurants in Canada, the spacious and well-decorated place is sure to win your heart with the delicious food and warm hospitality. All dishes are <a href="">spot</a> on, prepared with fresh ingredients and spices to give you a taste of rich Indian flavours. The lovely atmosphere and impeccable <a href="">service</a>a are winners all the way, along with a superb range of vegetarian, vegan and <a href="">non-vegetarian</a> options to suit all palates. Their sumptuous lunch and dinner buffet is highly recommended.</p></div>
+
+                            </body>
+                
+                            </html>
