--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,48 @@
 <html lang="en">
 
 <head>
-	<link rel="stylesheet" href="link.css">
 	<script  src="link.js"></script>
+	body{
+  background-color: grey;
+}
+ul {
+
+  display: inline-block;
+    vertical-align: top;
+    margin-left: 400px;
+    height: 80px;       
+    line-height: 100px;
+   padding:20px;
+   margin-top:5px;
+}
+a{
+	text-decoration: none;
+	color:black;
+	border-radius: 20px;
+  background: rgba(0,0,0,0.05);
+}
+
+li {
+font-size: 20px;
+    padding:20px;
+    display: inline;
+} 
+.wrapper{
+  font-size: 40px;
+  position:relative;
+}
+.highlight{
+  transition: all 2s;
+  border-bottom: 2px solid white;
+  position: absolute;
+  top:0;
+  background: white;
+  left:0;
+  z-index:-1;
+  border-radius: 20px;
+  display: block;
+  box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
 	 <title></title>
 </head>
 <body class="class-for-index">                 
