--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,7 @@
 
 <head>
 	<script  src="link.js"></script>
+	<style>
 	body{
   background-color: grey;
 }
@@ -44,7 +45,7 @@ font-size: 20px;
   display: block;
   box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
-	 <title></title>
+	</style>
 </head>
 <body class="class-for-index">                 
 	 <ul>
